# prompt-ci

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test-mock.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: self-test.yml
.golden-test/: sentiment_check.json  summarize_bullets.json
docs/: app.js  index.html  style.css
prompt_ci/: cli.py  config.py  runner.py  similarity.py  storage.py
tests/: test_config.py  test_runner.py  test_similarity.py  test_storage.py
