[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-ci"
version = "0.1.0"
description = "Unit tests for AI prompts — catch regressions before your users do"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "prompt", "testing", "ci", "regression", "ai", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "anthropic>=0.25",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
prompt-ci = "prompt_ci.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/prompt-ci"
Issues = "https://github.com/yourusername/prompt-ci/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_ci*"]
