[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-drift"
version = "0.1.1"
description = "Unit tests for AI prompts. Catch regressions before your users do."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "prompt", "testing", "ci", "regression", "ai", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "anthropic>=0.25",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
prompt-drift = "prompt_ci.cli:main"

[project.urls]
Homepage = "https://github.com/Andrew-most-likely/prompt-ci"
Issues = "https://github.com/Andrew-most-likely/prompt-ci/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_ci*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
